Fix code background color for dark mode.

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -13,7 +13,6 @@
   --color-gray-50: #c0c0c0;
   --color-gray-90: #333;
 
-  --color-zink: #27272a;
   --color-blue-300: #93c5fd;
   --color-blue-500: #3b82f6;
 
@@ -134,7 +133,6 @@ code {
   -webkit-hyphens: manual;
   -moz-hyphens: manual;
   hyphens: manual;
-  background-color: #efefef;
   padding-left: 4px;
   padding-right: 4px;
   border-radius: 0.15em;
